modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
     <main>
       <section id="block-1">
         <div class="text">
-          <h1 style="color: hsl(179, 62%, 43%); font-weight: 700;">Join our
+          <h1 class="heading-1"
+            style="color: hsl(179, 62%, 43%); font-weight: 700;">Join our
             community</h1>
 
           <p style="color: hsl(71, 73%, 54%); font-weight: bold;">30-day,
             hassle-free money back
             guarantee </p>
           Gain access to our full library of tutorials along with expert code
-          reviews.
+          reviews. <br>
           Perfect for any developers who are serious about honing their skills.
         </div>
       </section>
@@ -34,8 +35,9 @@
         <div class="text">
           <h1 style="color: white; font-weight: 700;">Monthly Subscription</h1>
 
-          <p>&dollar;29 per month
-
+          <p style="color: white;"><span style="font-size: 2rem;">&dollar;29
+            </span><span style="color: rgba(255, 255, 255, 0.719);">per month</span>
+          </p><p style="color: white;">
             Full access for less than &dollar;1 a day
 
           </p>
@@ -45,16 +47,16 @@
 
       <section id="block-3">
         <div class="text">
-          <h1>Why Us</h1>
-
-          Tutorials by industry experts
-          Peer &amp; expert code review
-          Coding exercises
-          Access to our GitHub repos
-          Community forum
-          Flashcard decks
-          New videos every week
-        </div>
+          <h1 style="color: white;">Why Us</h1>
+          <p style="color: rgba(255, 255, 255, 0.904);">Tutorials by industry experts<br>
+            Peer &amp; expert code review<br>
+            Coding exercises<br>
+            Access to our GitHub repos<br>
+            Community forum<br>
+            Flashcard decks<br> 
+            New videos every week
+          </p>
+          </div>
       </section>
 
     </main>
