--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <!-- displays site properly based on user's device -->
 
     <link rel="icon" type="image/png" sizes="32x32"
-      href="./images/favicon-32x32.png">
-    <link rel="stylesheet" href="/style.css">
+      href="images/favicon-32x32.png">
+    <link rel="stylesheet" href="style.css">
 
     <title>Frontend Mentor | Single Price Grid Component</title>
 
